welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: value update is not a member of Boolean
while(haveBaggle()=true) {
      ^